feat(importers): support for redmine

--- a/packages/import/package.json
+++ b/packages/import/package.json
@@ -22,7 +22,7 @@
     "cli": "ts-node src/cli",
     "dev:import": "NODE_ENV=development yarn build:import",
     "build:import": "run-s build:clean build:rollup",
-    "build:rollup": "npx rollup -c",
+    "build:rollup": "npx rollup -c -w",
     "build:clean": "npx rimraf dist"
   },
   "dependencies": {
